--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="mainActivity"
             type="com.konai.sendbirdapisampleapp.MainActivity" />
@@ -108,6 +107,7 @@
             android:background="@color/white"
             android:text="채팅방 없음"
             android:gravity="center"
+            android:visibility="invisible"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
