--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,10 +29,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="로그인 사용자 정보 : "
                 android:textColor="@color/black"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                android:text="로그인 사용자 정보 : " />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/userIdTextView"
@@ -171,12 +171,19 @@
                 android:layout_height="wrap_content"
                 android:hint="사용자 닉네임 입력" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/logInButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="@{()->mainActivity.logInButtonClicked()}"
                 android:text="로그인" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/uiKitButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="@{()->mainActivity.uiKitButtonClicked()}"
+                android:text="UI KIT TEST" />
         </LinearLayout>
 
 
