--- a/app/src/main/res/layout/fragment_friend.xml
+++ b/app/src/main/res/layout/fragment_friend.xml
@@ -34,6 +34,19 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageButton
+                android:id="@+id/addFriendButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:backgroundTint="@color/transparent"
+                android:src="@drawable/ic_baseline_person_add_alt_1_24"
+                app:tint="@color/gray_icon"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <View
@@ -84,7 +97,7 @@
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@id/userNickTextView"
                 app:layout_constraintTop_toBottomOf="@id/userNickTextView"
-                tools:text="사용자 닉네임" />
+                tools:text="사용자 아이디" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
