--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#E1DFDF</color>
+    <color name="transparent">#00FFFFFF</color>
+    <color name="gray_icon">#7D7B7B</color>
 </resources>
