--- a/app/src/main/res/layout/fragment_friend.xml
+++ b/app/src/main/res/layout/fragment_friend.xml
@@ -42,10 +42,10 @@
                 android:layout_marginRight="10dp"
                 android:backgroundTint="@color/transparent"
                 android:src="@drawable/ic_baseline_person_add_alt_1_24"
-                app:tint="@color/gray_icon"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/gray_icon" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -80,8 +80,8 @@
                 android:id="@+id/userNickTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
                 android:layout_marginLeft="10dp"
+                android:textColor="@color/black"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@id/userProfileImageView"
@@ -120,6 +120,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/userProfileLayout" />
 
+        <TextView
+            android:id="@+id/emptyFriendCover"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@color/gray"
+            android:gravity="center"
+            android:text="Empty Friend List"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/div2" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
