--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,187 +4,34 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <variable
-            name="mainActivity"
-            type="com.konai.sendbirdapisampleapp.activity.MainActivity" />
+
     </data>
 
-    <!-- -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".activity.MainActivity">
 
-        <LinearLayout
-            android:id="@+id/currentUserLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="로그인 사용자 정보 : "
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/userIdTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:hint="USER INFO"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-        <View
-            android:id="@+id/div"
-            android:layout_width="0dp"
-            android:layout_height="2dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/currentUserLayout" />
-
-        <!-- -->
-        <LinearLayout
-            android:id="@+id/inviteLayout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/div">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="대화상대 초대 : " />
-
-            <EditText
-                android:id="@+id/inviteEditText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="대화 상대 아이디 입력"
-                android:textSize="16sp" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/inviteButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="@{()->mainActivity.inviteButtonClicked()}"
-                android:text="초대" />
-        </LinearLayout>
-
-        <View
-            android:id="@+id/div2"
-            android:layout_width="0dp"
-            android:layout_height="2dp"
-            android:background="@color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/inviteLayout" />
-
-        <TextView
-            android:id="@+id/channelListTextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="#D4D2D6"
-            android:gravity="center"
-            android:text="채널 리스트"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/div2" />
-
-        <!--        -->
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/chatListRecyclerView"
+        <FrameLayout
+            android:id="@+id/fragmentContainer"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/channelListTextView" />
-
-        <TextView
-            android:id="@+id/chatListRecyclerViewCover"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@color/white"
-            android:gravity="center"
-            android:text="채팅방 없음"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/channelListTextView" />
-
-        <!-- -->
-        <ProgressBar
-            android:id="@+id/logInProgressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:id="@+id/logInLayout"
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomNavigationView"
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="#DCDADA"
-            android:gravity="center"
-            android:orientation="vertical"
+            android:layout_height="wrap_content"
+            app:itemRippleColor="@null"
+            app:itemIconTint="@drawable/select_menu_color"
+            app:labelVisibilityMode="unlabeled"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:visibility="invisible">
-
-            <EditText
-                android:id="@+id/userIdEditText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="사용자 아이디 입력" />
-
-            <EditText
-                android:id="@+id/nickNameEditText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="사용자 닉네임 입력" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/logInButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="@{()->mainActivity.logInButtonClicked()}"
-                android:text="로그인" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/uiKitButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="@{()->mainActivity.uiKitButtonClicked()}"
-                android:text="UI KIT TEST" />
-        </LinearLayout>
-
-
+            app:menu="@menu/bottom_navi_menu" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
