--- a/app/src/main/res/layout/fragment_friend.xml
+++ b/app/src/main/res/layout/fragment_friend.xml
@@ -37,9 +37,9 @@
 
             <ImageButton
                 android:id="@+id/addFriendButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
+                android:layout_width="@dimen/button_size"
+                android:layout_height="@dimen/button_size"
+                android:layout_marginRight="5dp"
                 android:backgroundTint="@color/transparent"
                 android:src="@drawable/ic_baseline_person_add_alt_1_24"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -68,8 +68,8 @@
 
             <ImageView
                 android:id="@+id/userProfileImageView"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_margin="15dp"
                 android:background="@color/gray"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -99,6 +99,18 @@
                 app:layout_constraintTop_toBottomOf="@id/userNickTextView"
                 tools:text="사용자 아이디" />
 
+            <ImageButton
+                android:id="@+id/myChannelButton"
+                android:layout_width="@dimen/button_size"
+                android:layout_height="@dimen/button_size"
+                android:layout_marginRight="5dp"
+                android:background="@color/transparent"
+                android:src="@drawable/ic_baseline_textsms_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/gray_icon" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <View
@@ -124,11 +136,11 @@
             android:id="@+id/emptyFriendCover"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:background="@color/gray"
             android:gravity="center"
             android:text="Empty Friends List"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/div2" />
 
