--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:enabled="false"
-            android:onClick="@{()->loginActivity.logInButtonClicked()}"
+            android:onClick="@{()->loginActivity.onLogInButtonClicked()}"
             android:text="로그인" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:enabled="false"
-            android:onClick="@{()->loginActivity.uiKitLaunchButtonClicked()}"
+            android:onClick="@{()->loginActivity.onUiKitLaunchButtonClicked()}"
             android:text="ui kit app start" />
     </LinearLayout>
 </layout>
