channelActivity user id/nick

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="mainActivity"
+            type="com.konai.sendbirdapisampleapp.activity.MainActivity" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
