--- a/app/src/main/res/layout/activity_channel.xml
+++ b/app/src/main/res/layout/activity_channel.xml
@@ -97,7 +97,7 @@
             android:layout_marginBottom="10dp"
             android:text="전송"
             android:textColor="@color/black"
-            android:onClick="@{()->channelActivity.sendButtonClicked()}"
+            android:onClick="@{()->channelActivity.onSendButtonClicked()}"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
