--- a/app/src/main/res/layout/item_chat_channel_list.xml
+++ b/app/src/main/res/layout/item_chat_channel_list.xml
@@ -8,9 +8,9 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/itemLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp">
+        android:layout_height="@dimen/item_size">
 
         <ImageView
             android:id="@+id/coverImage"
@@ -60,7 +60,7 @@
             android:background="@color/gray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/lastMessageTextView" />
+            app:layout_constraintBottom_toBottomOf="@id/itemLayout"/>
 
         <TextView
             android:id="@+id/timeTextView"
